[project]
name = "mkklunatest"
version = "0.1.0"
description = "Service for payments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "dishka>=1.9.1",
    "fastapi>=0.135.3",
    "faststream>=0.6.7",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
]
